--- a/package.json
+++ b/package.json
@@ -30,28 +30,26 @@
     "babel-core": "^6.18.0",
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
-    "css-loader": "^0.25.0",
-    "electron-load-devtool": "^0.3.0",
+    "css-loader": "^0.26.0",
+    "electron": "^1.4.7",
+    "electron-load-devtool": "^0.4.0",
     "electron-packager": "^8.2.0",
-    "electron-prebuilt": "^1.3.8",
     "immutable": "^3.8.1",
     "material-ui": "^0.16.1",
     "moment": "^2.16.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
-    "react-tap-event-plugin": "^1.0.0",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
-    "redux-actions": "^0.13.0",
+    "redux-actions": "^1.0.0",
     "redux-observable": "^0.12.1",
+    "rxjs": "^5.0.0-rc.3",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.3.1",
     "ts-loader": "^1.1.0",
-    "typescript": "^2.0.8",
+    "typescript": "^2.0.10",
     "webpack": "^1.13.3"
-  },
-  "dependencies": {
-    "electron-load-devtool": "^0.3.0"
   }
 }
