Add fade-in/out animation

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/electron": "^1.4.25",
     "@types/material-ui": "^0.16.38",
     "@types/react": "^0.14.43",
+    "@types/react-addons-css-transition-group": "^0.14.18",
     "@types/react-dom": "^0.14.18",
     "@types/react-redux": "^4.4.32",
     "@types/react-tap-event-plugin": "0.0.30",
@@ -37,6 +38,7 @@
     "material-ui": "^0.16.1",
     "moment": "^2.16.0",
     "react": "^15.3.2",
+    "react-addons-css-transition-group": "^15.4.1",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "react-tap-event-plugin": "^2.0.1",
